Bug 169662 - column width is not saved
Summary: column width is not saved
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-08-23 15:30 UTC by Florian
Modified: 2008-08-27 11:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Florian 2008-08-23 15:30:32 UTC
Version:           4.1.0 (using 4.1.1 (KDE 4.1.0 (4.1 >= 20080722)) "release 38.1", KDE:KDE4:Factory:Desktop / openSUSE_11.0)
Compiler:          gcc
OS:                Linux (i686) release 2.6.25.11-0.1-default

the width of column is not saved

1) opening kontact
2) selecting tasks
3) changing the column width with mouse
4) closing kontact
5) opening kontact
6) column width is back to default
Comment 1 Thomas Thrainer 2008-08-26 16:47:17 UTC
This is probably due to the small todo list in the sidebar. It should store its own settings in another config group, otherwise the column widths, column visibility and sorting order will be restored for both todo list with the same settings after a KOrganizer restart.
Comment 2 Florian 2008-08-26 20:35:03 UTC
Small todolist in side bar?
Sorry, I do not understand this.
I have no sidebar, there is only one todo list with 30-40 items.
the width is not stored after restart of Kontact.

Please let me know, what information you need.
Comment 3 Thomas Thrainer 2008-08-27 11:49:01 UTC
Strangely, my commit didn't make it to this bug report. But anyway, this bug has been fixed with commit 852935. The fix is backported to the 4.1 branch, and should be included in 4.1.1.

BTW, there is a small todo list in the sidebar at the left of the big one. However, KOrganizer can be configured to not display the sidebar when in the todo view. And even if you see the sidebar, it is possible that the small todo view is collapsed.