Store the settings of the todo view in the sidebar in a separate config group. Now the settings of both the main todo view and the one in the sidebar are stored correctly.

BUG:169662

svn path=/trunk/KDE/kdepim/; revision=852935